-
Bug
-
Resolution: Done
-
P2: Important
-
5.7.0
-
None
-
Ubuntu 14.04, 16.04, KDE 4 and 5
-
4387fb424ef3df9a324bb5dbc90e313625723cf5
To reproduce please do this using the code below:
- Drag the drawer from the right hand side into the screen so that it is visible
- Drag it out again to hide it (or click somewhere outside the drawer)
- Double-click the window title bar or hit the window maximize button, or just resize the window by dragging it so that it becomes larger
- The Drawer is now visible at the position where it previously was hidden just outside the screen edge
This happens when the drawer is docked at the right or bottom window edge. The Drawer must have been visible at least once for this to happen.
import QtQuick 2.7 import QtQuick.Controls 2.0 import QtQuick.Layouts 1.0 ApplicationWindow { visible: true width: 640 height: 480 title: qsTr("Hello World") Drawer { edge: Qt.RightEdge ColumnLayout { GroupBox { title: "groupbox" ColumnLayout { CheckBox { text: "checkbox" } Label { text: "text" } Button { text: "button" } RadioButton { text: "radiobox" } } } } } }
- is duplicated by
-
QTBUG-54801 Bad relocation of Drawer in RightEdge
-
- Closed
-
| For Gerrit Dashboard: QTBUG-54578 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 164505,2 | Drawer: reposition when closed | 5.7 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |