Drawer: reposition when closed

A drawer must be repositioned even when closed, or else it will peek
out when anchored to the right or bottom edge and the window is resized.

Change-Id: Idf86ec1d841cfcc333eb6c69d07b3e4b2b4015da
Task-number: QTBUG-54578
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>